# AOG

./: .gitignore  BUILD.md  CLAUDE.md  ERROR_HANDLING_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  LICENSE.md  NETWORK_SECURITY_FIX_SUMMARY.md  PUMP_SAFETY_DOCUMENTATION.md  README.md  ROADMAP.md  SECURITY.md  SECURITY_FIX_SUMMARY.md  TESTING.md  TEST_COVERAGE_SUMMARY.md  algaecore-raspian.py  diagram.fzz  intakeco2anylizer.ino  overview.md  project_description.md  setup.sh  test_network_security.sh  test_permissions.sh  todo.md
arduino/sensorkit/: sensorkit.ino
arduino/sensorovfkit/ovf/: ovf.ino
media/: 2021-09-22T182414.csv  media.MD
src/: aog.rs  main.rs  setup.rs
src/aog/: gpio.rs  http.rs  pump.rs  qwiic.rs  tools.rs
src/aog/gpio/: status.rs  thread.rs
src/src-v2-rust-alpha/: Cargo.toml  PUMP_CONTROL_FEATURES.md  README.md  setup.sh  test_auth.sh
src/src-v2-rust-alpha/docs/: qwiic-relay-recovery.md
src/src-v2-rust-alpha/examples/: test_relay_recovery.rs
src/src-v2-rust-alpha/sensorkit/: sensorkit.ino
src/src-v2-rust-alpha/sensorovfkit/: ovf.ino
src/src-v2-rust-alpha/sensorovfkit/ovf/: ovf.ino
src/src-v2-rust-alpha/src/: aog.rs  error.rs  error_handling_tests.rs  lib.rs  main.rs  setup.rs
src/src-v2-rust-alpha/src/aog/: auth.rs  command.rs  command_exec.rs  error.rs  error_monitor.rs  error_tests.rs  gpio.rs  gpio_status.rs  http.rs  instance.rs  lcd.rs  ph_sensor.rs  pump.rs  pump_safety.rs  qwiic.rs  retry.rs  sensors.rs  tests_overflow.rs  tools.rs  video.rs  water_level.rs  web.rs
src/src-v2-rust-alpha/src/aog/gpio/: thread.rs
src/src-v2-rust-alpha/tests/: auth_integration_tests.rs  error_handling_tests.rs  instance_management_tests.rs  integration_test.rs  ph_sensor_tests.rs  property_tests.rs  security_integration_tests.rs  water_sensor_tests.rs
src/src-v2-rust-alpha/www/: index.html  login.html
src/src-v2-rust-alpha/www/css/: sb-admin-2.css
src/src-v2-rust-alpha/www/js/aog/: index.js
www/: login.html
www/css/: aog.css
