[package]
name = "AOG"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.12.0"
serde_json = "1.0.66"
savefile="0.7.4"
savefile-derive="0.7.4"
shuteye = "0.3.3"
rouille = { version = "3.1.1", features = ["ssl"] }
sds011 = "0.2.1"
serialport = "4.1.0"
rand = "0.8.3"
termion = "1.5.6"
serde = { version = "1.0.127", features = ["derive"] }
serde_derive = "1.0.127"
rscam = "0.5.5"
zip = "0.5"
signal-hook = "0.3.9"
log = "0.4.14"
machine-ip = "0.1"
qwiic-lcd-rs = "0.1.1"
qwiic-relay-rs = "0.1.1"
i2cdev = "0.4.4"
simple_logger = { git = "https://github.com/PixelCoda/rust-simple_logger.git", version = "1.13.6" }
reqwest = { version = "0.11.3", features = ["blocking", "json"] }