[package]
name = "aog"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.12.0"
serde_json = "1.0.96"
shuteye = "0.3.3"
rouille = { version = "3.6.2", features = ["ssl"] }
sds011 = "0.2.1"
serialport = "4.2.1"
rand = "0.8.3"

serde = { version = "1.0.133", features = ["derive", "rc"] }

rscam = "0.5.5"
zip = "0.5"
signal-hook = "0.3.9"
log = "0.4.14"
machine-ip = "0.1"
qwiic-lcd-rs = "0.1.1"
qwiic-relay-rs = "0.1.1"
i2cdev = "0.4.4"
simple_logger = { git = "https://github.com/PixelCoda/rust-simple_logger.git", version = "1.13.6" }
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
error-chain = "0.12.4"
sudo = "0.5"
sha2 = "0.10.6"
titlecase = "2.2.1"
mime = "0.3.17"
clap = { version = "4.3.3", features = ["derive"] }
serial2 = "0.2.1"
chrono = "0.4"